--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -111,7 +111,15 @@
                 <div class="card add-animation animation" [ngClass]="{'animate': rowInView[0]}">
                   <img src="/assets/images/montage-3.jpg">
                 </div>
+                <div class="card add-animation animation" [ngClass]="{'animate': rowInView[0]}">
+                    <img src="/assets/images/hand-drawing-3.jpg">
+                  </div>
               </div>
+              <!-- <div class="col-md-4">
+                  <div class="card add-animation animation" [ngClass]="{'animate': rowInView[0]}">
+                    
+                  </div>
+                </div> -->
             </div>
             <div class="row" in-view (inview)="animateRow($event, 1)">
               <div class="col-md-12">
