--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -150,7 +150,7 @@
 .card .card-img-left {
   color: #fff;
   height: 100%;
-  background: url(/assets/images/profil2.jpg) center no-repeat;
+  background: url(/assets/images/profil.jpg) center no-repeat;
   background-size: cover;
 }
 .section-projet .card ul{
