--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -93,14 +93,13 @@
 }
 .section .parallax, .section .full-image {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
   display: block;
 }
 .section .parallax > img, .section .full-image > img {
-  min-width: 100%;
   min-height: 100%;
-  width: auto;
+  width: 100%;
   height: auto;
   position: relative;
   z-index: 1;
