--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -62,18 +62,10 @@
 .section-header h1 {
   letter-spacing: 0.1em;
   font-weight: 100;
-  font-size: 6em;
+  font-size: 5vw;
   font-family: "Slim-Joe";
   text-transform: uppercase;
   text-shadow: -2px 2px 0px rgba(0, 0, 0, 0.3), -2px 4px 2px rgba(0, 0, 0, 0.1);
-}
-.section-header h5 {
-  font-size: 1.3em;
-  margin: 0 auto .5em;
-  line-height: 1.5;
-  letter-spacing: 0.125;
-  text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
-  font-family: 'Droid Serif',"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 .section-header p {
   letter-spacing: 0.1em;
