--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -37,6 +37,9 @@
   display: block;
   background-color: #FFFFFF;
 }
+.section .subtitle{
+  font-size: 2vw;
+}
 .section-header {
   padding: 0;
 }
@@ -46,7 +49,8 @@
   width: 100%;
   height: 100%;
   display: block;
-  top: 0;
+  top: 0;  
+  padding-bottom: 4vh;
 }
 .section-header .content {
   color: white;
@@ -78,7 +82,6 @@
 }
 .section-header .separator {
   color: #fff;
-  margin: 2em auto;
 }
 .section-header .separator.line-separator:before, .section-header .separator.line-separator:after {
   border-color: white;
@@ -200,37 +203,6 @@
 .card h3 {
   text-transform: capitalize;
 }
-a.scroll-arrow{
-  text-align: center;
-  font-size: 35px;
-  color: white;
-  width: 50px;
-  line-height: 52px;
-  border-radius: 50%;
-  height: 50px;
-  border: 2px solid white;
-  display: block;
-  margin: 0 auto;
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  z-index: 1029;
-  -webkit-transform: translateX(-50%);
-  -moz-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
-  transform: translateX(-50%);
-  cursor: pointer;
-  opacity: 0.8;
-}
-a.scroll-arrow:hover{
-  color: white;
-  border: 2px solid white;
-  opacity: 1;
-}
-a.scroll-arrow i:hover, a.scroll-arrow i:focus {
-  color: white;
-}
 .section-4, .btn-group-custom {
   position: relative;
   overflow: hidden;
@@ -277,15 +249,36 @@ a.scroll-arrow i:hover, a.scroll-arrow i:focus {
     overflow: hidden;
 }
 .btn-group-custom{  
-  position: absolute;
-  bottom: 20px;
+  position: absolute;  
+  bottom: 10px;
 }
 .btn {
-    border-radius: 2px;
-    border-width: 1px;
-    font-family: "Verlag-Book","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 600;
-    line-height: 1;
+  border-radius: 2px;
+  border-width: 1px;
+  font-family: "Verlag-Book","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 600;
+  line-height: 1;
+}
+a.scroll-arrow{
+  font-size: 5vw;
+  color: #161617;
+  height: 50px;
+  margin: 0 auto;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  z-index: 1029;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  cursor: pointer;
+  opacity: 0.9;
+}
+a.scroll-arrow:hover{
+  opacity: 1;
+  color: #161617;
+}
+a.scroll-arrow i:hover, a.scroll-arrow i:focus {
+  color: #161617;
 }
 .btn-black {
   background-color: #434547;
