--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -263,10 +263,9 @@ a.scroll-arrow{
   font-size: 5vw;
   color: white;
   text-shadow: 2px 2px 1px #434547;
-  height: 50px;
   margin: 0 auto;
   position: absolute;
-  bottom: 20px;
+  bottom: 0;
   left: 50%;
   z-index: 1029;
   -webkit-transform: translateX(-50%);
