Gestion de la taille du choix de langue selon la taille de l'écran, disparition de la barre haute en faible résolution

--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -18,6 +18,16 @@
     margin: 0;
   }
 }
+@media (max-width: 768px) {
+  .navbar .navbar-brand{
+    visibility: hidden;
+  }
+  .navbar-default.navbar-transparent{
+    background-color: #ffffff00;
+    border-bottom: none;
+  }
+}
+
 .navbar-toggle {
   outline: 0 !important;
   border: 0;
