--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,7 +4,7 @@
 }
 .separator-container .separator {
   color: #c5a47e;
-  margin: 0 auto 1em;
+  margin: 0 auto 0;
   width: 11em;
 }
 .separator-container .separator.line-separator:before, .separator-container .separator.line-separator:after {
@@ -252,6 +252,12 @@
   position: absolute;  
   bottom: 10px;
 }
+@media (max-width: 575px) {
+  .btn-group-custom .btn-langue .btn{
+    padding: .25rem .5rem;
+    font-size: .375rem;
+  }
+ }
 .btn {
   border-radius: 2px;
   border-width: 1px;
