--- a/src/styles.css
+++ b/src/styles.css
@@ -92,6 +92,7 @@ p {
   color:#777777;
 }
 .wrapper {
+  overflow: hidden;
   -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -moz-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -o-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
