--- a/src/app/contact-map/contact-map.component.html
+++ b/src/app/contact-map/contact-map.component.html
@@ -12,12 +12,15 @@
 				<i class="fa fa-paper-plane"></i>
 			</a>
 			<h4 translate>Want to share</h4>
-			<div class="col-md-6" style="float:left">
-				<button class="btn btn-lg btn-contact btn-block btn-share"><i class="fa fa-facebook-square"></i> Facebook</button>
+			<div class="row justify-content-sm-center justify-content-center">
+				<div class="col-md-6 col-sm-3 col-3">
+					<button class="btn btn-lg btn-contact btn-block btn-share"><i class="fa fa-facebook-square"></i> <span class="socialNetwork">Facebook</span></button>
+				</div>
+				<div class="col-md-6 col-sm-3 col-3">
+					<button class="btn btn-lg btn-contact btn-block btn-share"><i class="fa fa-twitter"></i> <span class="socialNetwork">Twitter</span></button>
+				</div>
 			</div>
-			<div class="col-md-6" style="float:left">
-				<button class="btn btn-lg btn-contact btn-block btn-share"><i class="fa fa-twitter"></i> Twitter</button>
-			</div>
+			
 		</div>
 	</div>
 	<div class="map">
