--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -138,12 +138,13 @@
 .card .card-sidetext{
   text-align: left;
   text-indent: 10%;
-  padding-top: 20px;
-  padding-right: 30px;
+  padding-top: 20px;  
+  padding-right: 50px;
+  padding-left: 50px;
 }
 .card .card-img-left {
   color: #fff;
-  height: 100%;
+  height: 39vh;
   background: url(/assets/images/profil.jpg) center no-repeat;
   background-size: cover;
 }
@@ -198,7 +199,9 @@
   font-size: 1em;
   min-height: 100px;    
   text-align: justify;
-  text-indent: 10%;
+  text-indent: 10%;  
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .card h3 {
   text-transform: capitalize;
@@ -344,7 +347,9 @@ div#comparison {
   height: 60vw;
   max-width: 600px;
   max-height: 600px;
-  overflow: hidden; 
+  overflow: hidden;   
+  margin-left: auto;
+  margin-right: auto;
 }
 div#comparison figure { 
   background-image: url(/assets/images/montage-before.jpg); 
