Changement de comportement du menu de droite

--- a/src/app/right-menu/right-menu.component.html
+++ b/src/app/right-menu/right-menu.component.html
@@ -14,12 +14,12 @@
 				<i class="fa fa-linkedin fa-lg"></i>
 			</a>
 		</li>
-		<li><a [scrollTo]="'#about'" [scrollDuration]="700" translate>About</a></li>
-		<li><a [scrollTo]="'#projects'" [scrollDuration]="700" translate>Projects</a></li>
-		<li><a [scrollTo]="'#images'" [scrollDuration]="700" translate>Realisations</a></li>
-		<li><a [scrollTo]="'#whatwedo'" [scrollDuration]="700" translate>What we do</a></li>
-		<li><a [scrollTo]="'#slider'" [scrollDuration]="700" translate>Slider</a></li>
-		<li><a [scrollTo]="'#resume'" [scrollDuration]="700" translate>Resume</a></li>
-		<li><a [scrollTo]="'#contact'" [scrollDuration]="700" translate >Contact</a></li>
+		<li><a [scrollTo]="'#about'" [scrollDuration]="700" translate (click)="closeMenu()">About</a></li>
+		<li><a [scrollTo]="'#projects'" [scrollDuration]="700" translate (click)="closeMenu()">Projects</a></li>
+		<li><a [scrollTo]="'#images'" [scrollDuration]="700" translate (click)="closeMenu()">Realisations</a></li>
+		<li><a [scrollTo]="'#whatwedo'" [scrollDuration]="700" translate (click)="closeMenu()">What we do</a></li>
+		<li><a [scrollTo]="'#slider'" [scrollDuration]="700" translate (click)="closeMenu()">Slider</a></li>
+		<li><a [scrollTo]="'#resume'" [scrollDuration]="700" translate (click)="closeMenu()">Resume</a></li>
+		<li><a [scrollTo]="'#contact'" [scrollDuration]="700" translate (click)="closeMenu()">Contact</a></li>
 	</ul>
 </div>
