--- a/src/styles.css
+++ b/src/styles.css
@@ -100,17 +100,7 @@ p {
   transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
 }
 .nav-open .wrapper {
-  -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
-  -moz-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
-  -o-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
-  -ms-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
-  transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
-
-  -webkit-transform: translate3d(-150px, 0, 0);
-  -moz-transform: translate3d(-150px, 0, 0);
-  -o-transform: translate3d(-150px, 0, 0);
-  -ms-transform: translate3d(-150px, 0, 0);
-  transform: translate3d(-150px, 0, 0);
+  opacity: 0.3;
 }
 .navbar .container .navbar-toggle{
   -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
