--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,25 +71,35 @@
             <div class="row">
               <div class="col-md-6">                
                 <div class="card">
-                  <span translate>Professional Text</span>
-                  <ul>
-                    <li translate>Professional Text Elem 1</li>
-                    <li translate>Professional Text Elem 2</li>
-                    <li translate>Professional Text Elem 3</li>
-                    <li translate>Professional Text Elem 4</li>
-                    <li translate>Professional Text Elem 5</li>
-                    <li translate>Professional Text Elem 6</li>
-                  </ul>
+                  <img src="/assets/images/pro.png" class="card-img-top card-dimension-custom">
+                  <div class="card-body">
+                    <h5 class="card-title" translate>Professional Title</h5>
+                    <span class="card-text" translate>Professional Text</span>
+                    <ul>
+                      <li translate>Professional Text Elem 1</li>
+                      <li translate>Professional Text Elem 2</li>
+                      <li translate>Professional Text Elem 3</li>
+                      <li translate>Professional Text Elem 4</li>
+                      <li translate>Professional Text Elem 5</li>
+                      <li translate>Professional Text Elem 6</li>
+                    </ul>
+                  </div>
+                  
                 </div>               
               </div>
               <div class="col-md-6">
                 <div class="card">
-                  <span translate>Private Text</span>    
-                  <ul>
-                    <li translate>Private Text Elem 1</li>
-                    <span translate>Private Text Elem 2</span>
-                    <li translate>Private Text Elem 3</li>
-                  </ul>
+                  <img src="/assets/images/private.png" class="card-img-top card-dimension-custom">
+                  <div class="card-body">
+                    <h5 class="card-title" translate>Private Title</h5>
+                    <span class="card-text" translate>Private Text</span>    
+                    <ul>
+                      <li translate>Private Text Elem 1</li>
+                      <span translate>Private Text Elem 2</span>
+                      <li translate>Private Text Elem 3</li>
+                    </ul>
+                  </div>
+                  
                 </div>     
               </div>
             </div>
