--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -241,7 +241,7 @@
                 </div>
               </div>
               <div class="row" in-view (inview)="animateRow($event, 3)">
-                <div class="card add-animation animation" [ngClass]="{'animate': rowInView[3]}" >
+                <div class="card add-animation animation box-shadowed" [ngClass]="{'animate': rowInView[3]}" >
                   <div class="row">
                     <div class="col-md-4">  
                       <div class="card-img-left">                          
