--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -95,7 +95,7 @@
                     <span class="card-text" translate>Private Text</span>    
                     <ul>
                       <li translate>Private Text Elem 1</li>
-                      <span translate>Private Text Elem 2</span>
+                      <div class="li-or" translate>Private Text Elem 2</div>
                       <li translate>Private Text Elem 3</li>
                     </ul>
                   </div>
