Ajout du logo, amélioration de la carte parcours

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,13 +42,13 @@
         <div class="container">
           <div class="row">
             <div class="title">
-              <h2 translate [translateParams]="{company: company}">About Company</h2>
+              <h2 translate [translateParams]="{company: company}">About Company <img class="md-logo" src="/assets/images/logo-graphite.png"></h2>
               <div class="separator-container">
                 <div class="separator line-separator">
                   ∎
                 </div>
               </div>
-              <p class="large" translate [translateParams]="{company: company}">
+              <p class="large justify-indent" translate [translateParams]="{company: company}">
                 Introduction section 1                
               </p>
             </div>
@@ -250,6 +250,7 @@
                       <p translate>Resume Text 1</p>              
                       <p translate>Resume Text 2</p>              
                       <p translate>Resume Text 3</p>
+                      <img class="logo-parcours" src="/assets/images/logo-graphite-full.png">
                     </div>
                   </div>                   
                 </div>
@@ -265,6 +266,7 @@
     <footer class="footer footer-color-black">
       <div class="container">
         <div class="copyright" translate>
+          <img class="sm-logo" src="/assets/images/logo-graphite.png">
           Contribution
         </div>
       </div>
