--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -30,6 +30,16 @@
   margin: 0 auto;
   display: block;
 }
+.md-logo{
+  max-height: 50px;
+}
+.sm-logo{
+  max-height: 40px;
+}
+.justify-indent{
+  text-align: justify;
+  text-indent: 40px;
+}
 .section .text-area {
   padding: 4.375em 0 0 0;
   position: relative;
@@ -157,11 +167,21 @@
   padding-right: 50px;
   padding-left: 50px;
 }
-.card .card-img-left {
-  color: #fff;
-  height: 39vh;
-  background: url(/assets/images/profil.jpg) center no-repeat;
-  background-size: cover;
+@media (max-width: 767px) {
+  .card .card-img-left {
+    color: #fff;
+    height: 37vh;
+    background: url(/assets/images/profil.jpg) center no-repeat;
+    background-size: cover;
+  }
+}
+@media (min-width: 768px) {
+  .card .card-img-left {
+    color: #fff;
+    height: 100%;
+    background: url(/assets/images/profil.jpg) center no-repeat;
+    background-size: cover;
+  }
 }
 .section-projet .card ul{
   text-align: left;
@@ -208,7 +228,7 @@
 }
 .card p {
   font-size: 1em;
-  min-height: 100px;    
+  min-height: 90px;
   text-align: justify;
   text-indent: 10%;  
   padding-left: 10px;
@@ -220,6 +240,14 @@
 .card-dimension-custom{
   width: 8rem;
   margin: auto;
+}
+.logo-parcours{
+  max-height: 60px;  
+  margin-left: 5vw;
+}
+.section.section-image{
+  background: url(/assets/images/logo-graphite-transparent.png) top no-repeat;
+  background-size: cover;
 }
 .section-4, .btn-group-custom {
   position: relative;
@@ -235,7 +263,6 @@
 .footer .copyright {
     color: #777777;
     padding: 10px 15px;
-    margin: 15px 3px;
     line-height: 20px;
     text-align: center;
     font-size: 14px;
