--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,3 +1,6 @@
+.full-logo{
+  max-height: 40px;
+}
 .navbar .navbar-brand {
   font-size: 1.5vh;
   font-family: "Slim-Joe";
@@ -14,7 +17,7 @@
   transition: all .5s .1s;
 }
 @media (max-width: 575px) { 
-  .navbar.navbar-default .container{
+  .navbar.navbar-default .container-flex{
     margin: 0;
   }
 }
@@ -32,12 +35,11 @@
   outline: 0 !important;
   border: 0;
   background-color: transparent;
-  width: 20px;
-  height: 20px;
   display: block;
   position: relative;
   float: right;
-  margin-top: 8px;
+  margin-top: 16px;
+  margin-right: 10px;
   color: #343434;
   cursor: pointer;
 }
