--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top fixed-top" [ngClass]="{'navbar-transparent': !isOutsideView}">
-	<div class="container">
+	<div class="container-flex">
 		<div class="navbar-brand">
-			{{company}} 
+			<img class="full-logo" src="/assets/images/logo-graphite-full.png">
 		</div>
 		<button class="navbar-toggle" (click)="toggleMenu()" [ngClass]="{'toggled': rightMenuDisplayed}">
 			<span class="icon-bar bar1"></span>
