Ajout des premiers liens, correction du retour croix sur le menu droit

--- a/src/app/contact-map/contact-map.component.html
+++ b/src/app/contact-map/contact-map.component.html
@@ -7,7 +7,7 @@
 				Biot, France
 			</p>
 			<h4 translate>Want to say hello</h4>
-			<a class="btn btn-black btn-contact">
+			<a class="btn btn-black btn-contact" href="mailto:fiona@graphite-paysage.fr">
 				<span translate>CONTACT US</span>
 				<i class="fa fa-paper-plane"></i>
 			</a>
@@ -17,7 +17,7 @@
 					<button class="btn btn-lg btn-contact btn-block btn-share"><i class="fa fa-facebook-square"></i> <span class="socialNetwork">Facebook</span></button>
 				</div>
 				<div class="col-md-6 col-sm-3 col-3">
-					<button class="btn btn-lg btn-contact btn-block btn-share"><i class="fa fa-twitter"></i> <span class="socialNetwork">Twitter</span></button>
+					<button class="btn btn-lg btn-contact btn-block btn-share"><i class="fa fa-pinterest-square"></i> <span class="socialNetwork">Pinterest</span></button>
 				</div>
 			</div>
 			
