--- a/src/app/right-menu/right-menu.component.html
+++ b/src/app/right-menu/right-menu.component.html
@@ -1,8 +1,8 @@
 <div class="collapse navbar-collapse" [@menuTranslation]="menuTranslate()" style="min-height: 900px;">
 	<ul class="nav navbar-nav">
 		<li class="social-links">
-			<a>
-				<i class="fa fa-twitter fa-lg"></i>
+			<a href="mailto:fiona@graphite-paysage.fr">
+				<i class="fa fa-envelope fa-lg"></i>
 			</a>
 			<a>
 				<i class="fa fa-facebook fa-lg"></i>
