--- a/src/styles.css
+++ b/src/styles.css
@@ -102,7 +102,7 @@ p {
 .nav-open .wrapper {
   opacity: 0.3;
 }
-.navbar .container .navbar-toggle{
+.navbar .container-flex .navbar-toggle{
   -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -moz-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -o-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
