--- a/src/app/contact-map/contact-map.component.html
+++ b/src/app/contact-map/contact-map.component.html
@@ -14,10 +14,10 @@
 			<h4 translate>Want to share</h4>
 			<div class="row justify-content-sm-center justify-content-center">
 				<div class="col-md-6 col-sm-3 col-3">
-					<button class="btn btn-lg btn-contact btn-block btn-share"><i class="fa fa-facebook-square"></i> <span class="socialNetwork">Facebook</span></button>
+					<a href="https://www.facebook.com/Graphitepaysage/" class="btn btn-lg btn-contact btn-block btn-share"><i class="fa fa-facebook-square"></i> <span class="socialNetwork">Facebook</span></a>
 				</div>
 				<div class="col-md-6 col-sm-3 col-3">
-					<button class="btn btn-lg btn-contact btn-block btn-share"><i class="fa fa-pinterest-square"></i> <span class="socialNetwork">Pinterest</span></button>
+					<a href="https://www.pinterest.fr/graphitepaysage/" class="btn btn-lg btn-contact btn-block btn-share"><i class="fa fa-pinterest-square"></i> <span class="socialNetwork">Pinterest</span></a>
 				</div>
 			</div>
 			
