--- a/src/app/right-menu/right-menu.component.html
+++ b/src/app/right-menu/right-menu.component.html
@@ -4,13 +4,13 @@
 			<a href="mailto:fiona@graphite-paysage.fr">
 				<i class="fa fa-envelope fa-lg"></i>
 			</a>
-			<a>
+			<a href="https://www.facebook.com/Graphitepaysage/">
 				<i class="fa fa-facebook fa-lg"></i>
 			</a>
-			<a>
+			<a href="https://www.pinterest.fr/graphitepaysage/">
 				<i class="fa fa-pinterest-square fa-lg"></i>
 			</a>
-			<a>
+			<a href="https://www.linkedin.com/in/fiona-chapelli%C3%A8re-1b046a166/">
 				<i class="fa fa-linkedin fa-lg"></i>
 			</a>
 		</li>
