Ajout justification/padding, Ajout du scroll dans le menu droit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,10 +48,10 @@
                   ∎
                 </div>
               </div>
-              <p class="large justify-indent" translate [translateParams]="{company: company}">
+              <p class="large justify-indent p-gd-15" translate [translateParams]="{company: company}">
                 Introduction section 1                
               </p>
-            </div>
+            </div> 
           </div>
         </div>
       </div>      
@@ -74,7 +74,7 @@
                   <img src="/assets/images/pro.png" class="card-img-top card-dimension-custom"  alt="professional icon">
                   <div class="card-body">
                     <h5 class="card-title" translate>Professional Title</h5>
-                    <span class="card-text" translate>Professional Text</span>
+                    <div class="card-text justify-indent" translate>Professional Text</div>
                     <ul>
                       <li translate>Professional Text Elem 1</li>
                       <li translate>Professional Text Elem 2</li>
@@ -92,7 +92,7 @@
                   <img src="/assets/images/private.png" class="card-img-top card-dimension-custom" alt="private individual icon">
                   <div class="card-body">
                     <h5 class="card-title" translate>Private Title</h5>
-                    <span class="card-text" translate>Private Text</span>    
+                    <div class="card-text justify-indent" translate>Private Text</div>    
                     <ul>
                       <li translate>Private Text Elem 1</li>
                       <div class="li-or" translate>Private Text Elem 2</div>
