--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -36,6 +36,10 @@
 .sm-logo{
   max-height: 40px;
 }
+.p-gd-15{  
+  padding-left: 15px;
+  padding-right: 15px;
+}
 .justify-indent{
   text-align: justify;
   text-indent: 40px;
