--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -464,3 +464,30 @@ input[type=range]:focus::-moz-range-thumb {
   font-size: larger;    
   margin: 0px 0px 10px -25px;
 }
+.backdrop{  
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: transparent;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1000;
+}
+.backdrop-black{
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: black;
+  opacity: 0.6;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+}
+.backdrop-transition {
+  transition: all 0.4s ease;
+}
