--- a/src/styles.css
+++ b/src/styles.css
@@ -85,6 +85,13 @@ p {
     padding: 14px 30px;
     font-weight: 400;
 }
+.dark-modal .modal-content{
+  background-color: #292b2c;
+  color: white;  
+}
+.dark-modal .close {
+  color: white;
+}
 .cursor-pointer{
   cursor: pointer;
 }
@@ -122,5 +129,9 @@ p {
   -ms-transform: translate3d(-300px, 0, 0);
   transform: translate3d(-300px, 0, 0);
 }
-
-
+.dark-ui .carousel-control-prev-icon{
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23292b2c' viewBox='0 0 8 8'%3E%3Cpath d='M4 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") 
+}
+.dark-ui .carousel-control-next-icon{
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23292b2c' viewBox='0 0 8 8'%3E%3Cpath d='M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E")
+}
