--- a/src/styles.css
+++ b/src/styles.css
@@ -135,3 +135,9 @@ p {
 .dark-ui .carousel-control-next-icon{
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23292b2c' viewBox='0 0 8 8'%3E%3Cpath d='M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E")
 }
+.dark-ui .carousel-indicators li{
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.dark-ui .carousel-indicators .active {
+  background-color: #dedede;
+}
