--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -112,7 +112,7 @@
       <div class="container" >
         <div class="row">
           <div class="col-md-12">
-            <app-carousel></app-carousel>  
+            <app-gallery></app-gallery>  
           </div>
         </div>
       </div>
