--- a/src/app/gallery/modal/modal.component.html
+++ b/src/app/gallery/modal/modal.component.html
@@ -1,5 +1,4 @@
-<!-- <div class="modal-header">
-  <h4 class="modal-title">Modal title</h4>
+<!-- <div class="modal-header modal-header-custom">
   <button type="button" class="close" aria-label="Close" (click)="close()">
     <span aria-hidden="true">&times;</span>
   </button>
