--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -127,15 +127,15 @@
             <div class="row" in-view (inview)="animateRow($event, 1)">
               <div class="col-md-8">
                 <div class="card add-animation animation" [ngClass]="{'animate': rowInView[1]}">
-                  <img src="/assets/images/hand-drawing-1.jpg" alt="Handdrawing">
+                  <img src="/assets/images/plan-vue-haute.jpg" alt="Plan">
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="card add-animation animation" [ngClass]="{'animate': rowInView[1]}">
-                  <img src="/assets/images/montage-3.jpg" alt="Photomontage">
+                  <img src="/assets/images/panorama-handdrawing.jpg" alt="Handdrawing">
                 </div>
                 <div class="card add-animation animation" [ngClass]="{'animate': rowInView[1]}">
-                    <img src="/assets/images/hand-drawing-2.jpg" alt="Handdrawing">
+                    <img src="/assets/images/showroom.jpg" alt="Showroom">
                   </div>
               </div>
             </div>            
@@ -143,12 +143,12 @@
             <div class="row" in-view (inview)="animateRow($event, 2)">
               <div class="col-md-6">
                 <div class="card add-animation animation" [ngClass]="{'animate': rowInView[2]}">
-                  <img src="/assets/images/montage-1.jpg" alt="Photomontage">
+                  <img src="/assets/images/panorama-villa.jpg" alt="Panorama">
                 </div>
               </div>            
               <div class="col-md-6">
                 <div class="card add-animation animation" [ngClass]="{'animate': rowInView[2]}">
-                  <img src="/assets/images/montage-4.jpg" alt="3D rendering with Sketchup">
+                  <img src="/assets/images/spiral-garden.jpg" alt="Spiral Garden">
                 </div>
               </div>
             </div>
