Update instagram link

--- a/src/app/contact-map/contact-map.component.html
+++ b/src/app/contact-map/contact-map.component.html
@@ -17,7 +17,7 @@
 					<a href="https://www.facebook.com/Graphitepaysage/" class="btn btn-lg btn-contact btn-block btn-share"><i class="fa fa-facebook-square"></i> <span class="socialNetwork">Facebook</span></a>
 				</div>
 				<div class="col-md-6 col-sm-3 col-3">
-					<a href="https://www.instagram.com/graph.paysage/" class="btn btn-lg btn-contact btn-block btn-share"><i class="fa fa-instagram"></i> <span class="socialNetwork">Instagram</span></a>
+					<a href="https://www.instagram.com/graphitepaysage/" class="btn btn-lg btn-contact btn-block btn-share"><i class="fa fa-instagram"></i> <span class="socialNetwork">Instagram</span></a>
 				</div>
 			</div>
 			
