--- a/src/app/right-menu/right-menu.component.html
+++ b/src/app/right-menu/right-menu.component.html
@@ -7,8 +7,8 @@
 			<a href="https://www.facebook.com/Graphitepaysage/">
 				<i class="fa fa-facebook fa-lg"></i>
 			</a>
-			<a href="https://www.pinterest.fr/graphitepaysage/">
-				<i class="fa fa-pinterest-square fa-lg"></i>
+			<a href="https://www.instagram.com/graphitepaysage/">
+				<i class="fa fa-instagram fa-lg"></i>
 			</a>
 			<a href="https://www.linkedin.com/in/fiona-chapelli%C3%A8re-1b046a166/">
 				<i class="fa fa-linkedin fa-lg"></i>
